Fix: changed GraphLSTMNet.output_size to tuple Started test_call_multinodal_tf graph_lstm:   Changed GraphLSTMNet output_size to tuple   Fixed for some networkx API changes   Added transpose_output_from_cells_first_to_batch_first   Added check for selfloops in is_valid_nxgraph and (create_nxgraph)   Removed obsolete (as Python 3 is used) from __future__ imports unit_tests:   Created test_call_multinodal_tf, first two tests added therein   Added method plot_nxgraph, importing matplotlib requirements.txt:   Added matplotlib

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,9 @@ tensorflow
 # required for unittests
 numpy
 
+# required when plotting the GraphLSTM graph
+matplotlib
+
 # not necessary, but needed for networkx conversion tests (will result in ImportWarning):
 pandas
 scipy
