Added Kai's region ensemble network region_ensemble.py: Rough adaption to object-oriented style transformations.py: Added requirements.txt: Added region-ensemble requirements README.md: Added region-ensemble gpu installation hint

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,11 @@ matplotlib
 # not necessary, but needed for networkx conversion tests (will result in ImportWarning):
 pandas
 scipy
+
+# necessary for region-ensemble
+opencv
+keras
+seaborn
+plotly
+h5py
+scikit-learn
