Added instructions for Region Ensemble network to README.md   and requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,9 +12,11 @@ pandas
 scipy
 
 # necessary for region-ensemble
-opencv
 keras
 seaborn
 plotly
 h5py
 scikit-learn
+
+# additionally, the package 'opencv3' needs to be installed manually via 
+# 'conda install -n $YOUR_ENVIRONMENT_NAME -c menpo opencv3'
