Fixed trans_d and __init__(build_model) errors, changed prefix, + tqdm model.py:   added tqdm (progbar-like module)   changed prefix to "01-retest"   added variable *unzipping to model.__init__ transformations.py: added default value 0 to param `trans_d` requirements.txt: added tqdm

--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ seaborn
 plotly
 h5py
 scikit-learn
+tqdm
 
 # additionally, the package 'opencv3' needs to be installed manually via 
 # 'conda install -n $YOUR_ENVIRONMENT_NAME -c menpo opencv3'
