Fixed no GPU kernel for dropout error: Training region_ensemble works model.py: added show_progress parameter to sample_generator region_ensemble_test.py:   added allow_soft_placement=True to tf session config     in order to avoid no GPU kernel issue   added show_progress parameter   changed prefix to actual folder name README.md: added tqdm and pydot requirements.txt: added pydot

--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ plotly
 h5py
 scikit-learn
 tqdm
+pydot
 
 # additionally, the package 'opencv3' needs to be installed manually via 
 # 'conda install -n $YOUR_ENVIRONMENT_NAME -c menpo opencv3'
