Added FC layers after GLSTM: model trainable with decreasing loss Different checkpoint dirs per model name train_build.py:   Added FC layers after GLSTM (4*63, 4*63, 1*63)   Set GLSTM bias initializer to 1   Fixed passing correct list to RegEnPCA validate.py:   Added capability to restore from latest checkpoint   Added average joint positions printout train&validate: different checkpoint dirs per model name model.py: comment about hard coded list length in   get_mean_eigenvectors_eigenvalues_with_augment requirements.txt & README.md: added `pillow` as requirement

--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ h5py
 scikit-learn
 tqdm
 pydot
+pillow
 
 # additionally, the package 'opencv3' needs to be installed manually via 
 # 'conda install -n $YOUR_ENVIRONMENT_NAME -c menpo opencv3'
